--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,6 @@
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -21,6 +20,7 @@
 
 <body>
   <app-root></app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZUWRe2x6LvEBASMdG2tbUSoJXo76CPx0&libraries=places&language=en"></script>
 </body>
 
 </html>
