--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,17 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body>
+<body class="dark" >
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZUWRe2x6LvEBASMdG2tbUSoJXo76CPx0&libraries=places&language=en"></script>
+  <script
+  type="module"
+  src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.esm.js"
+  ></script>
+  <script
+    nomodule
+    src="https://unpkg.com/@ionic/pwa-elements@latest/dist/ionicpwaelements/ionicpwaelements.js"
+  ></script>
 </body>
 
 </html>
